# Hardware-Wallet

./: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.esp32doit-devkit-v1
components/atec/cryptoauthlib/lib/mbedtls/: atca_mbedtls_ecdsa.c  atca_mbedtls_wrap.c  atca_mbedtls_wrap.h
components/auth/cryptoauthlib/lib/mbedtls/: atca_mbedtls_ecdh.c
components/button_listener/: CMakeLists.txt  button_listener.c
components/button_listener/include/: button_listener.h
components/crypto/: CMakeLists.txt  bip32.h  hmac.c  hmac.h  options.h  sha2.c
components/password/: CMakeLists.txt  password.c
components/password/include/: password.h
components/splash_screen/: CMakeLists.txt  splash_screen.c
components/splash_screen/include/: splash_screen.h
components/ssd1306/: CMakeLists.txt
src/: main.c
